@@ -1,18 +1,5 @@
 package emanondev.deepdungeons.generic;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-
-import org.bukkit.Material;
-import org.bukkit.entity.ArmorStand;
-import org.bukkit.entity.Player;
-import org.bukkit.event.inventory.InventoryCloseEvent;
-import org.bukkit.inventory.EquipmentSlot;
-import org.bukkit.inventory.ItemStack;
-
 import emanondev.core.ItemBuilder;
 import emanondev.core.UtilsString;
 import emanondev.core.gui.FButton;
@@ -20,14 +7,25 @@ import emanondev.core.gui.PagedMapGui;
 import emanondev.deepdungeons.DeepDungeons;
 import emanondev.deepdungeons.parameter.Parameter;
 import net.md_5.bungee.api.ChatColor;
+import org.bukkit.Material;
+import org.bukkit.entity.ArmorStand;
+import org.bukkit.entity.HumanEntity;
+import org.bukkit.entity.Player;
+import org.bukkit.event.inventory.InventoryCloseEvent;
+import org.bukkit.inventory.EquipmentSlot;
+import org.bukkit.inventory.ItemStack;
+import org.jetbrains.annotations.NotNull;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
 
 public abstract class AStandGui extends PagedMapGui implements StandGui {
 	private final String managerName;
 
-	public AStandGui (String managerName, Player player, ArmorStand stand, Provider provider) {
+	public AStandGui (@NotNull String managerName,@NotNull  Player player,@NotNull  ArmorStand stand,@NotNull Provider provider) {
 		super("&9"+managerName+"Provider " + provider.getId(), 6, player, null, DeepDungeons.get());
-		if (stand == null || provider == null)
-			throw new NullPointerException();
 		if (!UtilsString.isValidID(managerName))
 			throw new IllegalStateException();
 		this.stand = stand;
@@ -37,18 +35,17 @@ public abstract class AStandGui extends PagedMapGui implements StandGui {
 		this.setButton(44,
 				new FButton(this, () -> new ItemBuilder(Material.BARRIER)
 						.setDescription(this.getLanguageSection(getTargetPlayer()).loadStringList(
-								"provider.delete.info", Arrays.asList("&6&lClick to delete this provider")))// TODO
+								"provider.delete.info", List.of("&6&lClick to delete this provider")))// TODO
 																													// better
 																													// text
 						.build(), (event) -> {
 							stand.remove();
-							new ArrayList<>(this.getInventory().getViewers()).forEach((c) -> c.closeInventory());
+							new ArrayList<>(this.getInventory().getViewers()).forEach(HumanEntity::closeInventory);
 							return false;
 						}));
 		registerParams();
 		ItemStack item = stand.getEquipment().getItemInMainHand();
-		loadValues(item == null ? Collections.emptyList()
-				: item.hasItemMeta() ? item.getItemMeta().getLore() : Collections.emptyList());
+		loadValues(item.hasItemMeta() ? item.getItemMeta().getLore() : Collections.emptyList());
 	}
 
 	private final ArmorStand stand;
@@ -67,18 +64,18 @@ public abstract class AStandGui extends PagedMapGui implements StandGui {
 	}
 
 	@SuppressWarnings("rawtypes")
-	private HashMap<Parameter, Object> params = new HashMap<>();
+	private final HashMap<Parameter, Object> params = new HashMap<>();
 
 	@SuppressWarnings("unchecked")
 	public <T> T getValue(Parameter<T> param) {
 		return (T) params.get(param);
 	}
 
-	public <T extends Object> void setValue(Parameter<T> param) {
+	public <T> void setValue(Parameter<T> param) {
 		this.setValue(param, param.defaultValue);
 	}
 
-	public <T extends Object> void setValue(Parameter<T> param, T value) {
+	public <T> void setValue(Parameter<T> param, T value) {
 		params.put(param, value);
 	}
 	
@@ -106,7 +103,7 @@ public abstract class AStandGui extends PagedMapGui implements StandGui {
 	@SuppressWarnings("unchecked")
 	@Override
 	public List<String> fillInfo() {
-		List<String> info = new ArrayList<String>();
+		List<String> info = new ArrayList<>();
 		params.forEach((k, v) -> k.addValue(info, v));
 		return info;
 	}
