@@ -1,9 +1,7 @@
 package emanondev.deepdungeons.parameter;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.*;
+
 import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 import emanondev.core.ItemBuilder;
@@ -33,17 +31,17 @@ public class EntityTypeParameter extends Parameter<EntityType> {
 
 	@Override
 	public GuiButton getEditorButton(StandGui gui) {
-		return new ResearchFButton<EntityType>(gui, () -> new ItemBuilder(Material.ZOMBIE_HEAD).setDescription(Arrays.asList(
+		return new ResearchFButton<>(gui, () -> new ItemBuilder(Material.ZOMBIE_HEAD).setDescription(Arrays.asList(
 				"&6&lMob Type: &e%value%",
 				"",
-				"&7[&fClick&7] &9Any &7> &9Change type"),"%value%",gui.getValue(this).name()
-				).build(),
+				"&7[&fClick&7] &9Any &7> &9Change type"), "%value%", gui.getValue(this).name()
+		).build(),
 				(s, v) -> v.name().toLowerCase().contains(s.toLowerCase()), (event, v) -> {
-					gui.setValue(this, v);
-					gui.open(gui.getTargetPlayer());
-					return true;
-				}, (v) -> new ItemBuilder(getMaterial(v)).setDescription(Arrays.asList("&6" + v.name())).build(),
-				() -> getEnabledEntity());
+			gui.setValue(this, v);
+			gui.open(gui.getTargetPlayer());
+			return true;
+		}, (v) -> new ItemBuilder(getMaterial(v)).setDescription(List.of("&6" + v.name())).build(),
+				this::getEnabledEntity);
 	}
 
 	private Collection<EntityType> getEnabledEntity() {
@@ -51,7 +49,7 @@ public class EntityTypeParameter extends Parameter<EntityType> {
 		for (EntityType type : EntityType.values())
 			if (type.isSpawnable() && type.isAlive())
 				set.add(type);
-		Collections.sort(set,(o1,o2)->o1.name().compareToIgnoreCase(o2.name()));
+		set.sort((o1, o2) -> o1.name().compareToIgnoreCase(o2.name()));
 		return set;
 	}
 	
